--- a/noor.html
+++ b/noor.html
@@ -1,1 +1,11 @@
-This is a new html file.
+//This is a new html file.
+<!doctype>
+<html>
+  <head>
+    <title>Its my first html code</title>
+    <body>
+      <h1>Hello GitHub</h1>
+    </body>
+  </head>
+  <html>
+   
