--- a/noor.html
+++ b/noor.html
@@ -5,6 +5,7 @@
     <title>Its my first html code</title>
     <body>
       <h1>Hello GitHub</h1>
+      <h2>first</h2>
     </body>
   </head>
   <html>
